projects/styles.css
/* following code block has been imported to test...*/
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    font-size: 62.5%;
    font-family: 'Roboto', sans-serif;
}

li {
    list-style: none;
}

a {
    text-decoration: none;
}

/*
html {
    font-size: 1rem;
}
*/

/* ----- OLD NAV ----- */
/* .header {
    border-bottom: 1px solid #E2E8F0;
} */

/* nav {
    font-size: 1.1rem;  
    padding: calc(8px + 1.5625vw); 
} 
*/

/* nav li {
    display: block;
    float: right;
    color: #e8a5ff;
} */

@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;1,400&display=swap');

/* ----- RESPONSIVE NAV ----- */
.nav-bar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 1rem 1.5rem;
    color: #e8a5ff;
}

.nav-list {
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
}

.nav-item {
    margin-left: 1rem;
    font-size: 1.4rem;
    font-weight: 400;
}

.nav-link {
    color: #FCF755;
}

.nav-link:hover{
    color: #7BF378;
}

.nav-logo {
    font-size: 3rem;
    font-weight: 300;
    color: #e8a5ff;
    letter-spacing: 0.1ch;
    /* padding: 1rem; */
}

.nav-logo:hover{
    text-decoration: none;
}

.hamburger {
    display: none;
}

.bar {
    color: #2171e5;
    display: block;
    width: 25px;
    height: 3px;
    margin: 5px auto;
    border-radius: 15px;
    -webkit-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
    background-color: #FCF755;
}

/* ----- BODY -----*/
 body {
    background-color: #2171e5;
    font-family: 'Roboto Mono', 'Victor Mono', 'Inconsolata', monospace;
    color: #fadbdb;
    width: 70%;
}

/* ----- HORIZONTAL RULE ----*/
hr {
/*   margin: calc(8px + 1.5625vw); */
    border: none;
    border-top: 2px solid #e8a5ff;
}

/* ----- TEXT ----- */
h1 {
    font-size: 2.0rem;
    font-weight: 400;
}

h2 {
    font-size: 1.4rem;
    font-weight: 300;
}

p {
    font-size: 1rem;
    margin-top: 10px;
    font-weight: 300;
}

/* ----- LINKS ----- */
a { 
    color: #FCF755;
    text-decoration: none;
    font-weight: 400;
}

a:hover {
    color: #7BF378;
/* TEST - to be added back   text-decoration: 1px underline; */
}

/* ----- LISTS ----- */
ul > li {
    display: inline-block;
}

.skills {
    margin-left: 2rem;
}

.skills > li {
    margin-right: 1rem;
}

/* ----- PROJECT PREVIEW ----- */
.preview {
    max-width: 70%;
    padding: calc(8px + 1.5625vw);
    position: relative;
    display: grid;
    place-items: center;
}

.ss-img > img {
    border: 3px solid #34dd7a;
    border-radius: 20px;
    }

.ss-img {
    opacity: 50%;
}

.ss-img:hover {
    opacity: 100%;
    cursor: pointer;
}

.ss-caplink {
    font-size: 1.1rem;
}

/* ----- FOOTER ----- */
footer {
    padding: calc(8px + 1.5625vw);
    font-size: 0.9rem;
}

.coming {
    color: #e8a5ff;
    font-weight: lighter;
    margin-bottom: 0.3rem;
}

/* ----- SYMBOLS -----*/
.flor-larger {
    font-size: larger;
}

/* ----- MEDIA QUERIES ----- */
@media only screen and (max-width: 768px) {

    .preview {
        max-width: 70%;
    }

    .nav-menu {
        position: fixed;
        top: -100%;
        left: 0;
        display: flex;
        flex-direction: column;
        justify-content:center;
        background-color: #f2edd1;
        width: 70%;
        text-align: left;
        transition: 0.3s;
        border-radius: 0 0 15px 15px;
        z-index: 1;
    }

    .nav-menu.active {
        top: 0;
    }

    .nav-item {
        margin: 0rem;
        padding: 1rem;
    }

    .nav-link {
        color: #2171e5;
        font-size: 2rem;
        letter-spacing: 0.2ch;
    }

    .nav-link:hover {
        color: #184fa2;
    }
    
    .hamburger {
        display: block;
        cursor: pointer;
        z-index: 2;
    }

    .hamburger.active .bar:nth-child(2) {
        opacity: 0;
    }

    .hamburger.active .bar:nth-child(1) {
        transform: translateY(8px) rotate(45deg);
        color:#FCF755;
        background-color: #2171e5;
    }

    .hamburger.active .bar:nth-child(3) {
        transform: translateY(-8px) rotate(-45deg);
        color:#FCF755;
        background-color: #2171e5;
    }

    .nav-item:nth-child(odd) {
        background-color: #ffee90;
    }

    .nav-link > .flor-larger {
        margin-left: 1rem;
        color: #e8a5ff;
    }
}

